# NoUse

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  FRONTIER_PLAN.md  PRODUCT_DESCRIPTION.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
crates/tda_engine/: Cargo.toml
crates/tda_engine/src/: lib.rs
docs/: ARCHITECTURE_INSPIRATION.md  CLI_CHAT_DESIGN.md  FNC_IMPLEMENTATION_SPEC.md  LAUNCH_PACK.md  LINKEDIN_POST.md  NOUS_BRAIN_CONCEPT.md  NOUS_DIFFERENTIATION.md  NOUS_INSTALLATION_SPEC.md  NOUS_ORGANIC_GROWTH.md  NOUS_PLASTICITY_HYPOTHESIS.md  NOUS_PREDICTION_MODEL.md  QUICKSTART.md  SUBSTACK_WORKFLOW.md  VIDEO_SCRIPT.md  WHY_NOT_NN_STORAGE.md
docs/handoffs/: 2026-04-14-01.md  2026-04-14-02.md  2026-04-15-03-d3-goal-weights-fixed.md  2026-04-15-04-brain-atlas-sensorimotor.md
docs/lab-notes/: 2026-04-14-daemon-cognitive-cycle-fix.md  2026-04-14-language-models-are-the-larynx-not-the-mind.md  2026-04-14-larynx-problem-substack-positioning.md  2026-04-14-percolation-problem.md  2026-04-15-brain-atlas-slagsida-sensorimotor.md  2026-04-15-fnc-sweet-spot-principle.md  2026-04-15-larynx-problem-lesswrong.md  2026-04-15-morning-research.md  2026-04-15-nervbana-sweet-spot.md  INDEX.md  (+2 more)
eval/: chess_elo_bench.py  reasoning_questions.json  run_eval.py  run_reasoning_benchmark.py  truthfulqa_adapter.py
examples/: groq_example.py
results/: eval_set_trace_observability.yaml
scripts/: generate_promo_visuals.py  paperclip_ollama_agent.py  render_substack_html.py
tests/: test_e2e_full_cycle.py  test_plasticity_live.py
(+102 files in other folders)
